// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CapturedIntearction.fromHarEntry can create a CapturedInteraction from a HttpArchive.Entry 1`] = `
{
  "request": {
    "body": null,
    "headers": [
      {
        "name": ":authority",
        "value": "petstore.swagger.io",
      },
      {
        "name": ":method",
        "value": "GET",
      },
      {
        "name": ":path",
        "value": "/v2/store/inventory",
      },
      {
        "name": ":scheme",
        "value": "https",
      },
      {
        "name": "accept",
        "value": "application/json",
      },
      {
        "name": "accept-encoding",
        "value": "gzip, deflate, br",
      },
      {
        "name": "accept-language",
        "value": "en-GB,en;q=0.9,nl-NL;q=0.8,nl;q=0.7,en-US;q=0.6",
      },
      {
        "name": "cache-control",
        "value": "no-cache",
      },
      {
        "name": "pragma",
        "value": "no-cache",
      },
      {
        "name": "referer",
        "value": "https://petstore.swagger.io/",
      },
      {
        "name": "sec-ch-ua",
        "value": "" Not A;Brand";v="99", "Chromium";v="101", "Google Chrome";v="101"",
      },
      {
        "name": "sec-ch-ua-mobile",
        "value": "?0",
      },
      {
        "name": "sec-ch-ua-platform",
        "value": ""macOS"",
      },
      {
        "name": "sec-fetch-dest",
        "value": "empty",
      },
      {
        "name": "sec-fetch-mode",
        "value": "cors",
      },
      {
        "name": "sec-fetch-site",
        "value": "same-origin",
      },
      {
        "name": "user-agent",
        "value": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.4951.54 Safari/537.36",
      },
    ],
    "host": "petstore.swagger.io",
    "method": "get",
    "path": "/v2/store/inventory",
    "query": [],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 133,
    },
    "headers": [
      {
        "name": "access-control-allow-headers",
        "value": "Content-Type, api_key, Authorization",
      },
      {
        "name": "access-control-allow-methods",
        "value": "GET, POST, DELETE, PUT",
      },
      {
        "name": "access-control-allow-origin",
        "value": "*",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "date",
        "value": "Wed, 11 May 2022 11:47:04 GMT",
      },
      {
        "name": "server",
        "value": "Jetty(9.2.9.v20150224)",
      },
    ],
    "statusCode": "200",
  },
}
`;

exports[`CapturedIntearction.fromHarEntry includes request bodies 1`] = `
{
  "request": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 128,
    },
    "headers": [
      {
        "name": ":authority",
        "value": "petstore.swagger.io",
      },
      {
        "name": ":method",
        "value": "POST",
      },
      {
        "name": ":path",
        "value": "/v2/store/order",
      },
      {
        "name": ":scheme",
        "value": "https",
      },
      {
        "name": "accept",
        "value": "application/json",
      },
      {
        "name": "accept-encoding",
        "value": "gzip, deflate, br",
      },
      {
        "name": "accept-language",
        "value": "en-GB,en;q=0.9,nl-NL;q=0.8,nl;q=0.7,en-US;q=0.6",
      },
      {
        "name": "cache-control",
        "value": "no-cache",
      },
      {
        "name": "content-length",
        "value": "128",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "origin",
        "value": "https://petstore.swagger.io",
      },
      {
        "name": "pragma",
        "value": "no-cache",
      },
      {
        "name": "referer",
        "value": "https://petstore.swagger.io/",
      },
      {
        "name": "sec-ch-ua",
        "value": "" Not A;Brand";v="99", "Chromium";v="101", "Google Chrome";v="101"",
      },
      {
        "name": "sec-ch-ua-mobile",
        "value": "?0",
      },
      {
        "name": "sec-ch-ua-platform",
        "value": ""macOS"",
      },
      {
        "name": "sec-fetch-dest",
        "value": "empty",
      },
      {
        "name": "sec-fetch-mode",
        "value": "cors",
      },
      {
        "name": "sec-fetch-site",
        "value": "same-origin",
      },
      {
        "name": "user-agent",
        "value": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.4951.54 Safari/537.36",
      },
    ],
    "host": "petstore.swagger.io",
    "method": "post",
    "path": "/v2/store/order",
    "query": [],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 119,
    },
    "headers": [
      {
        "name": "access-control-allow-headers",
        "value": "Content-Type, api_key, Authorization",
      },
      {
        "name": "access-control-allow-methods",
        "value": "GET, POST, DELETE, PUT",
      },
      {
        "name": "access-control-allow-origin",
        "value": "*",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "date",
        "value": "Wed, 11 May 2022 11:48:47 GMT",
      },
      {
        "name": "server",
        "value": "Jetty(9.2.9.v20150224)",
      },
    ],
    "statusCode": "200",
  },
}
`;

exports[`CapturedIntearction.fromHarEntry includes response bodies 1`] = `
{
  "request": {
    "body": null,
    "headers": [
      {
        "name": ":authority",
        "value": "petstore.swagger.io",
      },
      {
        "name": ":method",
        "value": "GET",
      },
      {
        "name": ":path",
        "value": "/v2/store/inventory",
      },
      {
        "name": ":scheme",
        "value": "https",
      },
      {
        "name": "accept",
        "value": "application/json",
      },
      {
        "name": "accept-encoding",
        "value": "gzip, deflate, br",
      },
      {
        "name": "accept-language",
        "value": "en-GB,en;q=0.9,nl-NL;q=0.8,nl;q=0.7,en-US;q=0.6",
      },
      {
        "name": "cache-control",
        "value": "no-cache",
      },
      {
        "name": "pragma",
        "value": "no-cache",
      },
      {
        "name": "referer",
        "value": "https://petstore.swagger.io/",
      },
      {
        "name": "sec-ch-ua",
        "value": "" Not A;Brand";v="99", "Chromium";v="101", "Google Chrome";v="101"",
      },
      {
        "name": "sec-ch-ua-mobile",
        "value": "?0",
      },
      {
        "name": "sec-ch-ua-platform",
        "value": ""macOS"",
      },
      {
        "name": "sec-fetch-dest",
        "value": "empty",
      },
      {
        "name": "sec-fetch-mode",
        "value": "cors",
      },
      {
        "name": "sec-fetch-site",
        "value": "same-origin",
      },
      {
        "name": "user-agent",
        "value": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.4951.54 Safari/537.36",
      },
    ],
    "host": "petstore.swagger.io",
    "method": "get",
    "path": "/v2/store/inventory",
    "query": [],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 133,
    },
    "headers": [
      {
        "name": "access-control-allow-headers",
        "value": "Content-Type, api_key, Authorization",
      },
      {
        "name": "access-control-allow-methods",
        "value": "GET, POST, DELETE, PUT",
      },
      {
        "name": "access-control-allow-origin",
        "value": "*",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "date",
        "value": "Wed, 11 May 2022 11:47:04 GMT",
      },
      {
        "name": "server",
        "value": "Jetty(9.2.9.v20150224)",
      },
    ],
    "statusCode": "200",
  },
}
`;

exports[`CapturedIntearction.fromHarEntry supports request body encoding for supported Buffer encodings 1`] = `
{
  "request": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 128,
    },
    "headers": [
      {
        "name": ":authority",
        "value": "petstore.swagger.io",
      },
      {
        "name": ":method",
        "value": "POST",
      },
      {
        "name": ":path",
        "value": "/v2/store/order",
      },
      {
        "name": ":scheme",
        "value": "https",
      },
      {
        "name": "accept",
        "value": "application/json",
      },
      {
        "name": "accept-encoding",
        "value": "gzip, deflate, br",
      },
      {
        "name": "accept-language",
        "value": "en-GB,en;q=0.9,nl-NL;q=0.8,nl;q=0.7,en-US;q=0.6",
      },
      {
        "name": "cache-control",
        "value": "no-cache",
      },
      {
        "name": "content-length",
        "value": "128",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "origin",
        "value": "https://petstore.swagger.io",
      },
      {
        "name": "pragma",
        "value": "no-cache",
      },
      {
        "name": "referer",
        "value": "https://petstore.swagger.io/",
      },
      {
        "name": "sec-ch-ua",
        "value": "" Not A;Brand";v="99", "Chromium";v="101", "Google Chrome";v="101"",
      },
      {
        "name": "sec-ch-ua-mobile",
        "value": "?0",
      },
      {
        "name": "sec-ch-ua-platform",
        "value": ""macOS"",
      },
      {
        "name": "sec-fetch-dest",
        "value": "empty",
      },
      {
        "name": "sec-fetch-mode",
        "value": "cors",
      },
      {
        "name": "sec-fetch-site",
        "value": "same-origin",
      },
      {
        "name": "user-agent",
        "value": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.4951.54 Safari/537.36",
      },
    ],
    "host": "petstore.swagger.io",
    "method": "post",
    "path": "/v2/store/order",
    "query": [],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 119,
    },
    "headers": [
      {
        "name": "access-control-allow-headers",
        "value": "Content-Type, api_key, Authorization",
      },
      {
        "name": "access-control-allow-methods",
        "value": "GET, POST, DELETE, PUT",
      },
      {
        "name": "access-control-allow-origin",
        "value": "*",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "date",
        "value": "Wed, 11 May 2022 11:48:47 GMT",
      },
      {
        "name": "server",
        "value": "Jetty(9.2.9.v20150224)",
      },
    ],
    "statusCode": "200",
  },
}
`;

exports[`CapturedIntearction.fromHarEntry supports response body encoding for supported Buffer encodings 1`] = `
{
  "request": {
    "body": null,
    "headers": [
      {
        "name": ":authority",
        "value": "petstore.swagger.io",
      },
      {
        "name": ":method",
        "value": "GET",
      },
      {
        "name": ":path",
        "value": "/v2/store/inventory",
      },
      {
        "name": ":scheme",
        "value": "https",
      },
      {
        "name": "accept",
        "value": "application/json",
      },
      {
        "name": "accept-encoding",
        "value": "gzip, deflate, br",
      },
      {
        "name": "accept-language",
        "value": "en-GB,en;q=0.9,nl-NL;q=0.8,nl;q=0.7,en-US;q=0.6",
      },
      {
        "name": "cache-control",
        "value": "no-cache",
      },
      {
        "name": "pragma",
        "value": "no-cache",
      },
      {
        "name": "referer",
        "value": "https://petstore.swagger.io/",
      },
      {
        "name": "sec-ch-ua",
        "value": "" Not A;Brand";v="99", "Chromium";v="101", "Google Chrome";v="101"",
      },
      {
        "name": "sec-ch-ua-mobile",
        "value": "?0",
      },
      {
        "name": "sec-ch-ua-platform",
        "value": ""macOS"",
      },
      {
        "name": "sec-fetch-dest",
        "value": "empty",
      },
      {
        "name": "sec-fetch-mode",
        "value": "cors",
      },
      {
        "name": "sec-fetch-site",
        "value": "same-origin",
      },
      {
        "name": "user-agent",
        "value": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.4951.54 Safari/537.36",
      },
    ],
    "host": "petstore.swagger.io",
    "method": "get",
    "path": "/v2/store/inventory",
    "query": [],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 133,
    },
    "headers": [
      {
        "name": "access-control-allow-headers",
        "value": "Content-Type, api_key, Authorization",
      },
      {
        "name": "access-control-allow-methods",
        "value": "GET, POST, DELETE, PUT",
      },
      {
        "name": "access-control-allow-origin",
        "value": "*",
      },
      {
        "name": "content-type",
        "value": "application/json",
      },
      {
        "name": "date",
        "value": "Wed, 11 May 2022 11:47:04 GMT",
      },
      {
        "name": "server",
        "value": "Jetty(9.2.9.v20150224)",
      },
    ],
    "statusCode": "200",
  },
}
`;

exports[`CapturedInteraction.fromPostmanEntry can create a CapturedInteraction from a PostmanEntry 1`] = `
{
  "request": {
    "body": null,
    "headers": [],
    "host": "postman-echo.com",
    "method": "get",
    "path": "/get",
    "query": [
      {
        "name": "foo1",
        "value": "bar1",
      },
      {
        "name": "foo2",
        "value": "bar2",
      },
    ],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 482,
    },
    "headers": [
      {
        "name": "Content-Encoding",
        "value": "gzip",
      },
      {
        "name": "Content-Type",
        "value": "application/json; charset=utf-8",
      },
      {
        "name": "Date",
        "value": "Tue, 11 Jun 2019 10:43:13 GMT",
      },
      {
        "name": "ETag",
        "value": "W/"161-aLhNcsGArlgLSKbxPqfBW3viHPI"",
      },
      {
        "name": "Server",
        "value": "nginx",
      },
      {
        "name": "set-cookie",
        "value": "sails.sid=s%3AGz-wblZgXE8FCDq7aJpx_tUgZUcG3Nsw.LdNEN8L0C7nGWkvGLwvdw6R2s6Syjr%2FzkvyevA8qR0c; Path=/; HttpOnly",
      },
      {
        "name": "Vary",
        "value": "Accept-Encoding",
      },
      {
        "name": "Content-Length",
        "value": "249",
      },
      {
        "name": "Connection",
        "value": "keep-alive",
      },
    ],
    "statusCode": "200",
  },
}
`;

exports[`CapturedInteraction.fromPostmanEntry includes request bodies with a Content-Type header 1`] = `
{
  "request": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 1188,
    },
    "headers": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
    "host": "postman-echo.com",
    "method": "post",
    "path": "/transform/collection",
    "query": [
      {
        "name": "from",
        "value": "1",
      },
      {
        "name": "to",
        "value": "2",
      },
    ],
  },
  "response": undefined,
}
`;

exports[`CapturedInteraction.fromPostmanEntry includes request bodies with no Content-Type header and a JSON language option 1`] = `
{
  "request": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 276,
    },
    "headers": [],
    "host": "postman-echo.com",
    "method": "put",
    "path": "/put",
    "query": [],
  },
  "response": undefined,
}
`;

exports[`CapturedInteraction.fromPostmanEntry includes request bodies with no Content-Type header, raw mode, and no language option 1`] = `
{
  "request": {
    "body": {
      "body": Anything,
      "contentType": "text/plain",
      "size": 58,
    },
    "headers": [],
    "host": "postman-echo.com",
    "method": "post",
    "path": "/post",
    "query": [],
  },
  "response": undefined,
}
`;

exports[`CapturedInteraction.fromPostmanEntry includes response bodies 1`] = `
{
  "request": {
    "body": null,
    "headers": [],
    "host": "postman-echo.com",
    "method": "get",
    "path": "/get",
    "query": [
      {
        "name": "foo1",
        "value": "bar1",
      },
      {
        "name": "foo2",
        "value": "bar2",
      },
    ],
  },
  "response": {
    "body": {
      "body": Anything,
      "contentType": "application/json",
      "size": 482,
    },
    "headers": [
      {
        "name": "Content-Encoding",
        "value": "gzip",
      },
      {
        "name": "Content-Type",
        "value": "application/json; charset=utf-8",
      },
      {
        "name": "Date",
        "value": "Tue, 11 Jun 2019 10:43:13 GMT",
      },
      {
        "name": "ETag",
        "value": "W/"161-aLhNcsGArlgLSKbxPqfBW3viHPI"",
      },
      {
        "name": "Server",
        "value": "nginx",
      },
      {
        "name": "set-cookie",
        "value": "sails.sid=s%3AGz-wblZgXE8FCDq7aJpx_tUgZUcG3Nsw.LdNEN8L0C7nGWkvGLwvdw6R2s6Syjr%2FzkvyevA8qR0c; Path=/; HttpOnly",
      },
      {
        "name": "Vary",
        "value": "Accept-Encoding",
      },
      {
        "name": "Content-Length",
        "value": "249",
      },
      {
        "name": "Connection",
        "value": "keep-alive",
      },
    ],
    "statusCode": "200",
  },
}
`;
